--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@polymer/lit-element": "^0.5.1",
     "@types/lodash": "^4.14.109",
+    "@types/path-to-regexp": "^1.7.0",
     "@types/seamless-immutable": "^7.1.1",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
@@ -22,6 +23,7 @@
     "lodash": "^4.17.10",
     "node-sass": "^4.9.0",
     "origami-zen": "^0.3.11",
+    "path-to-regexp": "^2.2.1",
     "polymer3-decorators": "https://github.com/tristanMatthias/polymer-decorators.git",
     "pwa-helpers": "^0.8.2",
     "redux": "^4.0.0",
@@ -37,6 +39,7 @@
     "zen-css": "^1.1.10"
   },
   "dependencies": {
+    "@types/route-parser": "^0.1.1",
     "copy-webpack-plugin": "^4.5.1",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0"
