--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@polymer/lit-element": "^0.5.1",
     "@types/lodash": "^4.14.109",
     "@types/path-to-regexp": "^1.7.0",
+    "@types/pluralize": "^0.0.28",
     "@types/seamless-immutable": "^7.1.1",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
@@ -24,6 +25,7 @@
     "node-sass": "^4.9.0",
     "origami-zen": "^0.3.11",
     "path-to-regexp": "^2.2.1",
+    "pluralize": "^7.0.0",
     "polymer3-decorators": "https://github.com/tristanMatthias/polymer-decorators.git",
     "pwa-helpers": "^0.8.2",
     "redux": "^4.0.0",
