--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@types/lodash": "^4.14.109",
     "@types/path-to-regexp": "^1.7.0",
     "@types/pluralize": "^0.0.28",
+    "@types/route-parser": "^0.1.1",
     "@types/seamless-immutable": "^7.1.1",
+    "awesome-typescript-loader": "^5.0.0",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "http-status-codes": "^1.3.0",
     "lit-html": "^0.10.0",
@@ -43,10 +47,6 @@
     "zen-css": "^1.1.12"
   },
   "dependencies": {
-    "@types/route-parser": "^0.1.1",
-    "awesome-typescript-loader": "^5.0.0",
-    "copy-webpack-plugin": "^4.5.1",
-    "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0"
+    "origami-core-server": "^0.4.2"
   }
 }
