--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "fuse.js": "^3.2.1",
     "html-webpack-plugin": "^3.2.0",
     "http-status-codes": "^1.3.0",
     "lit-html": "^0.10.0",
