--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/route-parser": "^0.1.1",
     "@types/seamless-immutable": "^7.1.1",
     "awesome-typescript-loader": "^5.0.0",
+    "color": "^3.0.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
