--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@polymer/lit-element": "^0.5.1",
+    "@types/deepmerge": "^2.1.0",
     "@types/lodash": "^4.14.109",
     "@types/path-to-regexp": "^1.7.0",
     "@types/pluralize": "^0.0.28",
@@ -25,19 +26,23 @@
     "color": "^3.0.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
+    "deepequal": "^0.0.1",
+    "deepmerge": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "fuse.js": "^3.2.1",
     "html-webpack-plugin": "^3.2.0",
     "http-status-codes": "^1.3.0",
+    "jsonml-ext": "^1.0.2",
     "lit-html": "^0.10.0",
     "lodash": "^4.17.10",
     "node-sass": "^4.9.0",
-    "origami-zen": "^0.3.19",
+    "origami-zen": "^0.3.20-alpha.9",
     "path-to-regexp": "^2.2.1",
     "pluralize": "^7.0.0",
     "polymer3-decorators": "https://github.com/tristanMatthias/polymer-decorators.git",
     "pwa-helpers": "^0.8.2",
     "redux": "^4.0.0",
+    "redux-injector": "^0.1.0",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.0.3",
     "seamless-immutable": "^7.1.3",
@@ -47,10 +52,10 @@
     "typescript": "^2.9.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3",
-    "zen-css": "^1.1.12"
+    "zen-css": "^1.1.13"
   },
   "dependencies": {
-    "origami-core-lib": "^0.3.9",
+    "origami-core-lib": "^0.3.12",
     "origami-core-server": "^0.4.2"
   }
 }
