--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,6 +69,9 @@
       "store": ["./src/store/index.ts"],
       "store/state": ["./src/store/state.ts"],
       "const": ["./src/const.ts"]
-    }
+    },
+    "typeRoots": [
+      "./src/types"
+    ]
   }
 }
