--- a/package.json
+++ b/package.json
@@ -6,52 +6,59 @@
   "author": "Tristan Matthias <hello@tristanmatthias.com>",
   "license": "MIT",
   "scripts": {
-    "clean": "rm -rf build/",
-    "build": "yarn clean; yarn build:sass; webpack-cli",
+    "clean": "rm -rf dist/; mkdir dist",
+    "build": "yarn clean; yarn build:sass; rollup --config",
+    "build:prod": "yarn clean; yarn build:sass; NODE_ENV=production rollup --config",
     "build:sass": "sass-render src/components/**/*.scss --suffix=-css.ts",
     "watch:sass": "yarn build:sass -- -w",
-    "watch": "webpack-cli --mode development -w",
+    "watch": "rollup --config -w",
     "serve": "http-server-spa build/",
     "start": "yarn watch & yarn watch:sass & yarn serve"
   },
   "devDependencies": {
     "@polymer/lit-element": "^0.5.1",
+    "@types/color": "^3.0.0",
+    "@types/deep-equal": "^1.0.1",
     "@types/deepmerge": "^2.1.0",
     "@types/lodash": "^4.14.109",
     "@types/path-to-regexp": "^1.7.0",
     "@types/pluralize": "^0.0.28",
     "@types/route-parser": "^0.1.1",
     "@types/seamless-immutable": "^7.1.1",
-    "awesome-typescript-loader": "^5.0.0",
     "color": "^3.0.0",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.11",
-    "deepequal": "^0.0.1",
+    "deep-equal": "^1.0.1",
     "deepmerge": "^2.1.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "fuse.js": "^3.2.1",
-    "html-webpack-plugin": "^3.2.0",
     "http-status-codes": "^1.3.0",
-    "jsonml-ext": "^1.0.2",
     "lit-html": "^0.10.0",
     "lodash": "^4.17.10",
-    "node-sass": "^4.9.0",
     "origami-zen": "^0.3.20-alpha.9",
     "path-to-regexp": "^2.2.1",
     "pluralize": "^7.0.0",
-    "polymer3-decorators": "https://github.com/tristanMatthias/polymer-decorators.git",
     "pwa-helpers": "^0.8.2",
     "redux": "^4.0.0",
     "redux-injector": "^0.1.0",
     "redux-thunk": "^2.3.0",
-    "sass-loader": "^7.0.3",
+    "rollup": "^0.64.1",
+    "rollup-plugin-babel-minify": "^5.0.0",
+    "rollup-plugin-commonjs": "^9.1.4",
+    "rollup-plugin-copy": "^0.2.3",
+    "rollup-plugin-filesize": "^4.0.1",
+    "rollup-plugin-gzip": "^2.0.0",
+    "rollup-plugin-multi-entry": "^2.0.2",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-notify": "^1.0.3",
+    "rollup-plugin-progress": "^0.4.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-sass": "^0.9.2",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-strip": "^1.1.1",
+    "rollup-plugin-typescript2": "^0.16.1",
     "seamless-immutable": "^7.1.3",
-    "ts-loader": "^4.4.1",
     "tslint": "^5.10.0",
     "tslint-config-origami": "^1.0.3",
     "typescript": "^2.9.1",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.3",
+    "uglifycss": "^0.0.29",
     "zen-css": "^1.1.13"
   },
   "dependencies": {
