--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "clean": "rm -rf dist/; mkdir dist",
     "build": "yarn clean; yarn build:sass; rollup --config",
-    "build:prod": "yarn clean; yarn build:sass; NODE_ENV=production rollup --config",
+    "gzip": "gzip-all 'dist/**/*.*(js|css|svg|png|jpg|jpeg)'",
+    "build:prod": "yarn clean; yarn build:sass; NODE_ENV=production rollup --config; yarn gzip",
     "build:sass": "sass-render src/components/**/*.scss --suffix=-css.ts",
     "watch:sass": "yarn build:sass -- -w",
     "watch": "rollup --config -w",
@@ -29,6 +30,7 @@
     "deep-equal": "^1.0.1",
     "deepmerge": "^2.1.1",
     "fuse.js": "^3.2.1",
+    "gzip-all": "^1.0.0",
     "http-status-codes": "^1.3.0",
     "lit-html": "^0.10.0",
     "lodash": "^4.17.10",
