Upgraded deps and refs. Added side-menu

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "strict": true,
     "noImplicitAny": true,
     "moduleResolution": "node",
+    "outDir": ".tsbuild/",
     "baseUrl": "./",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
@@ -23,6 +24,7 @@
       "actions": ["./src/actions/index.ts"],
       "actions/*": ["./src/actions/*"],
       "lib/*": ["./src/lib/*"],
+      "util/*": ["./node_modules/origami-zen/util/*"],
       "store": ["./src/store/index.ts"],
       "store/state": ["./src/store/state.ts"],
       "const": ["./src/const.ts"],
