--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf dist/; mkdir dist",
-    "build": "yarn clean; yarn build:sass; rollup --config",
     "gzip": "gzip-all 'dist/**/*.*(js|css|svg|png|jpg|jpeg)'",
-    "build:prod": "yarn clean; yarn build:sass; NODE_ENV=production rollup --config; yarn gzip",
+    "build:ts": "tsc -p .",
+    "build:rollup": "rollup -c",
     "build:sass": "sass-render src/components/**/*.scss --suffix=-css.ts",
-    "watch:sass": "yarn build:sass -- -w",
-    "watch": "rollup --config -w",
+    "build": "yarn clean; yarn build:sass; yarn build:ts; yarn build:rollup;",
+    "build:prod": "yarn clean; yarn build:sass; NODE_ENV=production yarn build:rollup; yarn gzip",
+    "watch:ts": "yarn build:ts -w",
+    "watch:rollup": "yarn build:rollup -w",
+    "watch:sass": "yarn build:sass -w",
+    "watch": "yarn watch:ts & yarn watch:rollup & yarn watch:sass",
     "serve": "http-server-spa build/",
     "start": "yarn watch & yarn watch:sass & yarn serve"
   },
   "devDependencies": {
-    "@polymer/lit-element": "^0.5.1",
+    "@polymer/lit-element": "^0.5.2",
     "@types/color": "^3.0.0",
     "@types/deep-equal": "^1.0.1",
     "@types/deepmerge": "^2.1.0",
@@ -26,6 +30,7 @@
     "@types/pluralize": "^0.0.28",
     "@types/route-parser": "^0.1.1",
     "@types/seamless-immutable": "^7.1.1",
+    "@webcomponents/webcomponentsjs": "^2.0.4",
     "color": "^3.0.0",
     "deep-equal": "^1.0.1",
     "deepmerge": "^2.1.1",
@@ -34,6 +39,7 @@
     "http-status-codes": "^1.3.0",
     "lit-html": "^0.10.0",
     "lodash": "^4.17.10",
+    "origami-rollup-config": "^1.0.0",
     "origami-zen": "^0.3.20-alpha.9",
     "path-to-regexp": "^2.2.1",
     "pluralize": "^7.0.0",
@@ -42,11 +48,11 @@
     "redux-injector": "^0.1.0",
     "redux-thunk": "^2.3.0",
     "rollup": "^0.64.1",
+    "rollup-plugin-alias": "^1.4.0",
     "rollup-plugin-babel-minify": "^5.0.0",
     "rollup-plugin-commonjs": "^9.1.4",
     "rollup-plugin-copy": "^0.2.3",
     "rollup-plugin-filesize": "^4.0.1",
-    "rollup-plugin-gzip": "^2.0.0",
     "rollup-plugin-multi-entry": "^2.0.2",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-notify": "^1.0.3",
@@ -59,7 +65,7 @@
     "seamless-immutable": "^7.1.3",
     "tslint": "^5.10.0",
     "tslint-config-origami": "^1.0.3",
-    "typescript": "^2.9.1",
+    "typescript": "^3.0.1",
     "uglifycss": "^0.0.29",
     "zen-css": "^1.1.13"
   },
